Finish See My Questions

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li data-toggle="modal" data-target="#submitQuestion"><a href="#">Submit Your Own Question</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-left">
-            <li data-toggle="modal" data-target="#getQuestions" id="getQuestionslink "><a href="#">See My Questions</a></li>
+            <li data-toggle="modal" data-target="#getQuestions"><a href="#"  id="getQuestionsLink" >See My Questions</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li id="register" data-toggle="modal" data-target="#signUp"><a href="#">Register</a></li>
@@ -94,7 +94,11 @@
           <h4 class="modal-title" id="myModalLabel">My Questions</h4>
         </div>
         <div class="modal-body" id="getModalBody">
-            STUFF GOES HERE
+            <div class="contentget"></div>
+
+
+            <button type="button" id="deleteButton" class="btn btn-danger">Delete All</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
