Change app name

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- Begin Jumbotron -->
   <div class="jumbotron">
 
-    <h1>Questions I've Asked My Sister</h1>
-    <h3>I posed these questions to my sister. Help her choose the right answers.</h3>
+    <h1>PollPanda</h1>
+    <h3>Submit quizzes for your friends to take!</h3>
 
     <!-- Begin Navbar -->
     <nav class="navbar navbar-default">
@@ -261,9 +261,6 @@
       <div>
         <p class="navbar-text pull-left">© 2016 - Site Built By Susan</p>
       </div>
-      <div class="navbar-btn btn-danger btn pull-right">
-        <span class="glyphicon glyphicon-sunglasses"></span>  My sister is actually really smart. And cool.</div>
-    </div>
   </div>
   <!-- End Footer -->
 
