--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="jumbotron">
 
     <h1>PollPanda</h1>
-    <h3>Submit quizzes for your friends to take!</h3>
+    <h3>Create polls for your friends to take</h3>
 
     <!-- Begin Navbar -->
     <nav class="navbar navbar-default">
@@ -24,10 +24,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-left">
-            <li data-toggle="modal" data-target="#submitQuestion"><a href="#">Submit Your Own Question</a></li>
+            <li data-toggle="modal" data-target="#submitQuestion"><a href="#">Submit Your Own Polls</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-left">
-            <li data-toggle="modal" data-target="#getQuestions"><a href="#"  id="getQuestionsLink" >See My Questions</a></li>
+            <li data-toggle="modal" data-target="#getQuestions"><a href="#" id="getQuestionsLink">See All Submitted Polls</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-left">
+            <li data-toggle="modal" data-target="#updateQuestions"><a href="#" id="updateQuestionsLink">Update My Poll</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li id="register" data-toggle="modal" data-target="#signUp"><a href="#">Register</a></li>
@@ -91,19 +94,44 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">My Questions</h4>
+          <h4 class="modal-title">My Questions</h4>
         </div>
         <div class="modal-body" id="getModalBody">
-            <div class="contentget"></div>
-
-
-            <button type="button" id="deleteButton" class="btn btn-danger">Delete All</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <div class="contentGet">
+          </div>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
   <!-- End Get Questions Modal -->
+
+  <!-- Begin Update Question Modal -->
+  <div class="modal fade update questions" id="updateQuestions" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Update My Poll</h4>
+        </div>
+        <div class="modal-body">
+          <label for="updateQuestionChoose">Which poll would you like to update?</label>
+          <form name="updateQuestionForm" id="updateForm">
+            <div class="form-group">
+              <input type="integer" name="question[id]" class="form-control grabthis" id="patchChooseId" placeholder="ID">
+            </div>
+            <div class="form-group">
+              <label for="inputQuestion">Question</label>
+              <input type="text" name="question[title]" class="form-control grabthis" id="updateQuestion1" placeholder="Update Question Title">
+            </div>
+            <button id='updatePatch' type="submit" class="btn btn-default">Submit</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Update Question Modal -->
 
   <!-- Begin Register Modal -->
   <div class="modal fade sign up" id="signUp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -204,16 +232,20 @@
       <div id="collapseOne" class="panel-collapse collapse">
         <div class="panel-body">
           <form id="panelA" action="">
-            <input type="radio" name="worms" id="panelAOne"> Absolutely!<br>
-            <input type="radio" name="worms" id="panelATwo"> Wtf? No.<br>
-            <input type="radio" name="worms" id="panelAThree"> I might need to Google this...<br>
+            <input type="radio" name="worms" id="panelAOne"> Absolutely!
+            <br>
+            <input type="radio" name="worms" id="panelATwo"> Wtf? No.
+            <br>
+            <input type="radio" name="worms" id="panelAThree"> I might need to Google this...
+            <br>
             <button type="submit" class="btn btn-default" id="panelASubmit">Submit</button>
           </form>
         </div>
       </div>
     </div>
 
-<div class="panel panel-default" id="panel2">      <div class="panel-heading">
+    <div class="panel panel-default" id="panel2">
+      <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-target="#collapseTwo"
              href="#collapseTwo" class="collapsed">
@@ -224,9 +256,12 @@
       <div id="collapseTwo" class="panel-collapse collapse">
         <div class="panel-body">
           <form action="">
-            <input type="radio" name="ketchup" value="panelBOne"> Most definitely<br>
-            <input type="radio" name="ketchup" value="panelBTwo"> No<br>
-            <input type="radio" name="ketchup" value="panelBThree"> Illuminati<br>
+            <input type="radio" name="ketchup" value="panelBOne"> Most definitely
+            <br>
+            <input type="radio" name="ketchup" value="panelBTwo"> No
+            <br>
+            <input type="radio" name="ketchup" value="panelBThree"> Illuminati
+            <br>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
         </div>
@@ -243,10 +278,14 @@
         </h4>
       </div>
       <div id="collapseThree" class="panel-collapse collapse">
-        <div class="panel-body">  <form action="">
-            <input type="radio" name="letters" value="panelCOne"> Without a doubt, yes<br>
-            <input type="radio" name="letters" value="panelCTwo"> Under no circumstances, no<br>
-            <input type="radio" name="letters" value="panelCThree"> They die in gang wars before they ever get to grow up<br>
+        <div class="panel-body">
+          <form action="">
+            <input type="radio" name="letters" value="panelCOne"> Without a doubt, yes
+            <br>
+            <input type="radio" name="letters" value="panelCTwo"> Under no circumstances, no
+            <br>
+            <input type="radio" name="letters" value="panelCThree"> They die in gang wars before they ever get to grow up
+            <br>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
         </div>
@@ -261,8 +300,8 @@
       <div>
         <p class="navbar-text pull-left">© 2016 - Site Built By Susan</p>
       </div>
-  </div>
-  <!-- End Footer -->
+    </div>
+    <!-- End Footer -->
 
 
 
