--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-left" style="display:none" >
+          <ul class="nav navbar-nav navbar-left" style="display:none">
             <li data-toggle="modal" data-target="#submitQuestion"><a href="#">Submit Your Own Polls</a></li>
             <li data-toggle="modal" data-target="#getQuestions"><a href="#" id="getQuestionsLink">See All Submitted Polls</a></li>
           </ul>
@@ -127,7 +127,7 @@
               <label for="inputQuestion">Answer 3</label>
               <input type="text" name="question[answer3]" class="form-control grabthis" id="updateAnswer3" placeholder="Answer 3">
             </div>
-            <button id='updatePatch' type="submit"class="btn btn-default">Submit</button>
+            <button type="submit"  class="btn btn-default updateSubmitButton" >Submit</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </form>
         </div>
