--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-left" style="display:none">
+          <ul class="nav navbar-nav navbar-left">
             <li data-toggle="modal" data-target="#submitQuestion"><a href="#">Submit Your Own Polls</a></li>
             <li data-toggle="modal" data-target="#getQuestions"><a href="#" id="getQuestionsLink">See All Submitted Polls</a></li>
           </ul>
@@ -130,6 +130,7 @@
             <button type="submit"  class="btn btn-default updateSubmitButton" >Submit</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </form>
+          <div class="updateStatusArea"></div>
         </div>
       </div>
     </div>
