--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <br>
             <input type="radio" name="worms" id="panelAThree"> I might need to Google this...
             <br>
-            <button type="submit" class="btn btn-default" id="panelASubmit">Submit</button>
+            <button type="submit" class="btn btn-default panelSubmit" id="panelASubmit">Submit</button>
           </form>
         </div>
       </div>
@@ -268,7 +268,7 @@
             <br>
             <input type="radio" name="ketchup" value="panelBThree"> Illuminati
             <br>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default panelSubmit">Submit</button>
           </form>
         </div>
       </div>
@@ -292,7 +292,7 @@
             <br>
             <input type="radio" name="letters" value="panelCThree"> They die in gang wars before they ever get to grow up
             <br>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default panelSubmit">Submit</button>
           </form>
         </div>
       </div>
