--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <!-- End Get Questions Modal -->
 
   <!-- Begin Update Question Modal -->
-  <div class="modal fade update questions" id="updateQuestion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal fade update questions" id="updateQuestionMod" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
